# noesis

./: .gitignore  ACKNOWLEDGEMENTS.md  AUTHORS.md  LICENSE.md  NOTES.md  README.md
examples/: CMakeLists.txt  package.xml
examples/framework/: CMakeLists.txt
examples/framework/python/: graph.py
examples/framework/src/: graph.cpp  hello.cpp  hyperparams.cpp  message.cpp  random.cpp  tensorboard.cpp
examples/gym/: README.md
examples/gym/classic/: CMakeLists.txt
examples/gym/classic/src/: acrobot.cpp  cartpole.cpp  pendulum.cpp
examples/gym/core/: CMakeLists.txt
examples/gym/core/src/: Environment.hpp  simple.cpp  synchronized.cpp  vectorized.cpp
examples/gym/mujoco/: CMakeLists.txt
examples/gym/mujoco/src/: hopper.cpp
examples/gym/raisim/: CMakeLists.txt
examples/gym/raisim/src/: capler.cpp  kinova3.cpp
examples/rl/classic/: CMakeLists.txt
examples/rl/classic/src/acrobot/: acrobot.cpp  graph.py  parameters.xml
examples/rl/classic/src/cartpole/: cartpole.cpp  graph.py  parameters.xml
examples/rl/classic/src/pendulum/: graph.py  pendulum.cpp
examples/rl/mujoco/: CMakeLists.txt
examples/rl/mujoco/resources/hyperparams/: test.xml  train.xml
examples/rl/mujoco/resources/hyperparams/agent/: model.xml  ppo.xml  trpo.xml
examples/rl/mujoco/resources/hyperparams/environment/: ant.xml  halfcheetah.xml  hopper.xml  humanoid.xml  walker2d.xml
examples/rl/mujoco/src/: agents.hpp  environments.hpp  test_mujoco.cpp  train_mujoco.cpp
examples/rl/raisim/: CMakeLists.txt
examples/rl/raisim/src/capler/ppo/: graph-baseline.py  graph-shared-layer.py  graph-shared-net.py  graph-state-dep-stddev-shared-layer.py  graph-state-dep-stddev-shared-net.py  graph-state-dep-stddev.py  parameters.xml  plot.py  run.sh  test.cpp  train.cpp
examples/rl/raisim/src/capler/trpo/: graph.py  parameters.xml  test.cpp  train.cpp
examples/rl/raisim/src/kinova3/: graph.py  mdp.hpp  perf.cpp  ppo.xml  sample.cpp  test.cpp  train.cpp  train.sh
noesis/: CMakeLists.txt  README.md  package.xml
noesis/cmake/: GTestMacros.cmake  noesis-config.cmake.in
noesis/include/noesis/: noesis.hpp
noesis/include/noesis/framework/core/: Graph.hpp  Graph.tpp  Object.hpp  Tensor.hpp  TensorAllocator.hpp  TensorMap.hpp  TensorTuple.hpp  TensorsSpec.hpp
noesis/include/noesis/framework/hyperparam/: HyperParameter.hpp  HyperParameterManager.hpp  HyperParameterTuple.hpp  hyper_parameters.hpp
noesis/include/noesis/framework/log/: message.hpp  metric.hpp  tensorboard.hpp  tensorboard.tpp  timer.hpp
noesis/include/noesis/framework/math/: TensorStatistic.hpp  TensorTupleStatistic.hpp  ops.hpp  random.hpp  statistics.hpp
noesis/include/noesis/framework/system/: filesystem.hpp  process.hpp  signal.hpp  tensorflow.hpp  time.hpp  version.hpp
noesis/include/noesis/framework/utils/: checksum.hpp  csv.hpp  dataset.hpp  filestream.hpp  macros.hpp  png.hpp  string.hpp  xml.hpp
noesis/include/noesis/gym/core/: Environment.hpp  Synchronizer.hpp  Vector.hpp
noesis/include/noesis/gym/envs/classic/acrobot/: AcrobotEnvironment.hpp  AcrobotVisualizer.hpp
noesis/include/noesis/gym/envs/classic/cartpole/: CartpoleEnvironment.hpp  CartpoleVisualizer.hpp
noesis/include/noesis/gym/envs/classic/common/: visualizer.hpp
noesis/include/noesis/gym/envs/classic/pendulum/: PendulumEnvironment.hpp  PendulumVisualizer.hpp
noesis/include/noesis/gym/envs/mujoco/ant/: AntActions.hpp  (+2 more)
noesis/include/noesis/gym/train/: MonitorInterface.hpp  RunnerInterface.hpp  SamplerInterface.hpp  VisualizerInterface.hpp
noesis/include/noesis/mdp/: AgentInterface.hpp  EnvironmentInterface.hpp  types.hpp
noesis/include/noesis/rl/__legacy__/: RealTimeRunner.hpp  RealTimeRunner.tpp  seqmem.h
noesis/include/noesis/rl/agent/: PpoAgent.hpp  TrpoAgent.hpp
noesis/include/noesis/rl/algorithm/policy_evaluation/: ClippedPolicyEvaluation.hpp  DampedPolicyEvaluation.hpp  GeneralizedAdvantageEstimation.hpp  value_estimation.hpp
noesis/include/noesis/rl/algorithm/policy_optimization/: ProximalPolicyOptimization.hpp  TrustRegionPolicyOptimization.hpp
noesis/include/noesis/rl/function/: StateValueFunction.hpp  StochasticPolicy.hpp
noesis/include/noesis/rl/math/: optimization.hpp
noesis/include/noesis/rl/memory/: SequenceTensorMemory.hpp  SequenceVectorMemory.hpp  TrajectoryMemory.hpp
noesis/include/noesis/rl/sample/: AdaptiveTrajectorySampler.hpp  TrajectorySampler.hpp
noesis/include/noesis/rl/train/: Runner.hpp  Tester.hpp
noesis/resources/materials/grid/: grid.material
noesis/src/framework/: noesis.cpp
noesis/src/framework/core/: Graph.cpp
noesis/src/framework/hyperparam/: HyperParameterManager.cpp  HyperParameterTuple.cpp  hyper_parameters.cpp
noesis/src/framework/log/: message.cpp  tensorboard.cpp  timer.cpp
noesis/src/framework/system/: process.cpp  signal.cpp  time.cpp  version.cpp
noesis/src/framework/utils/: png.cpp
noesis/src/gym/mujoco/: simulation.cpp  visualizer.cpp
noesis/src/gym/raisim/: visualizer.cpp
noesis/test/: CMakeLists.txt
noesis/test/src/framework/core/: TensorAllocatorTest.cpp  TensorMapTest.cpp  TensorTest.cpp  TensorTupleTest.cpp  TensorsSpecTest.cpp
noesis/test/src/framework/core/utils/: helpers.hpp
noesis/test/src/framework/hyperparam/: HyperParameterManagerTest.cpp  HyperParameterTest.cpp  HyperParameterTupleTest.cpp  parameters.xml
noesis/test/src/framework/log/: TensorBoardTest.cpp  TimerTest.cpp
noesis/test/src/framework/math/: RandomNumberGeneratorTest.cpp  StatisticsOperationsTest.cpp  TensorStatisticTest.cpp  TensorTupleStatisticTest.cpp
noesis/test/src/framework/system/: TensorFlowTest.cpp  TimeTest.cpp
noesis/test/src/framework/utils/: StringUtilsTest.cpp
noesis/test/src/gym/mujoco/: CMakeLists.txt
noesis/test/src/gym/mujoco/src/: AntEnvironmentTest.cpp  HalfcheetahEnvironmentTest.cpp  HopperEnvironmentTest.cpp  HumanoidEnvironmentTest.cpp  MujocoSimulationTest.cpp  MujocoVisualizerTest.cpp  Walker2dEnvironmentTest.cpp
noesis/test/src/gym/raisim/: CMakeLists.txt
noesis/test/src/gym/raisim/src/: CaplerSimulationTest.cpp  Kinova3SimulationTest.cpp
(+110 files in other folders)
