<?xml version="1.0"?>
<package format="2">
  <!--Package Header-->
  <name>noesis_examples</name>
  <version>0.2.0</version>
  <description>Examples for using Noesis.</description>
  <license>Apache 2.0</license>
  <url type="website">https://github.com/leggedrobotics/noesis</url>
  <maintainer email="tsounisv@ethz.ch">Vassilios Tsounis</maintainer>
  <author email="tsounisv@ethz.ch">Vassilios Tsounis</author>
  <!--Package Dependencies-->
  <buildtool_depend>cmake</buildtool_depend>
  <exec_depend>catkin</exec_depend>
  <build_depend>noesis</build_depend>
  <!--Package Export-->
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
